--- a/estilo/style.css
+++ b/estilo/style.css
@@ -20,6 +20,12 @@ body {
 
 }
 
+input {
+
+    text-align: center;
+
+}
+
 /* ------------------------------------------ */
 
 #panel {
@@ -147,9 +153,27 @@ body {
 
 }
 
-.cell {
+.large_cell {
 
     background-color: white;
+    text-align: center;
+
+    width: 100px;
+    height: 100px;
+
+    float: left;
+    display: table-column;
+
+    border: 1px solid black;
+
+    cursor: pointer;
+
+}
+
+.small_cell {
+
+    background-color: white;
+    text-align: center;
 
     width: 50px;
     height: 50px;
@@ -159,7 +183,32 @@ body {
 
     border: 1px solid black;
 
+    cursor: pointer;
+
 }
+
+.L_cont_cell {
+
+    width: 100%;
+    height: 100%;
+
+    margin: 0;
+
+    margin-top: 40px;
+
+}
+
+.S_cont_cell {
+
+    width: 100%;
+    height: 100%;
+
+    margin: 0;
+
+    margin-top: 15px;
+}
+
+
 
 .center {
 
