--- a/estilo/style.css
+++ b/estilo/style.css
@@ -186,9 +186,9 @@ input {
 
     cursor: pointer;
 
-    display:grid;
+    /*display:grid;
     justify-content: center;
-    align-content: center;
+    align-content: center;*/
 }
 
 .L_cont_cell {
@@ -199,17 +199,6 @@ input {
     margin: 0;
 
 }
-
-.S_cont_cell {
-
-    width: 100%;
-    height: 100%;
-
-    margin: 0;
-
-    margin-top: 15px;
-}
-
 
 
 .center {
