Texto de la derecha centrado

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -153,5 +153,6 @@ input {
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    text-align: center;
     margin: auto;
 }
