--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,6 +15,9 @@ body {
     height: 100%;
 
     position: relative;
+    background-image: url("../codigo/imagenes/background.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
 
 }
 
@@ -29,7 +32,9 @@ input {
 
 #panel {
 
-    background-color: turquoise;
+    background-image: url(../codigo/imagenes/leon.jpg);
+    background-size: 140%;
+    background-repeat: no-repeat;
 
     height: 100%;
     width: 15%;
@@ -47,6 +52,15 @@ input {
 
     width: 15%;
     height: 100%;
+
+}
+
+#centerStats {
+
+    width: auto;
+    height: auto;
+
+    margin-left: 15px;
 
 }
 
@@ -115,6 +129,3 @@ input {
     width: 100%;
     height: 25%;
 }
-
-
-/* ------------------------------------------ */
