--- a/estilo/table.css
+++ b/estilo/table.css
@@ -35,6 +35,7 @@
 /*CELLS*/
 
 
+
 .large_cell {
 
     background-color: white;
@@ -42,6 +43,9 @@
 
     width: 100px;
     height: 100px;
+
+    margin-left: 10px;
+    margin-top: 10px;
 
     float: left;
     display: table-column;
@@ -66,6 +70,9 @@
 
     width: 75px;
     height: 75px;
+
+    margin-left: 8px;
+    margin-top: 8px;
 
     float: left;
     display: table-column;
