--- a/estilo/style.css
+++ b/estilo/style.css
@@ -237,7 +237,8 @@ input {
 #global {
 
     position: relative;
-    padding: 15px;
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
 
     top: 45%;
     right: 5px;
@@ -246,6 +247,7 @@ input {
     height: 15%;
 
     border: 2px solid white;
+    border-radius: 3px;
 
 }
 
@@ -253,6 +255,8 @@ input {
 
     position: relative;
     text-align: center;
+
+    padding: 2px;
 
     border: 1px solid white;
     border-radius: 5px;
@@ -263,7 +267,7 @@ input {
 
     position: relative;
 
-    top: 10%;
+    top: 7%;
     font-size: 19px;
 
 }
