gmm - nueva imagen casillas cubiertas

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -207,6 +207,8 @@ input {
     text-align: center;
     padding: 4%;
 
+    background-color: rgba(0, 0, 0, 0.5);
+
     top: 5%;
     left: 22%;
 
