--- a/estilo/table.css
+++ b/estilo/table.css
@@ -34,25 +34,25 @@
 
 /*CELLS*/
 
+.small_cell, .medium_cell, .large_cell, .XS_cell {
 
+    /*background-color: rgba(0, 0, 0, 0.9);*/
+    text-align: center;
+
+    float: left;
+    display: table-column;
+
+    cursor: pointer;
+
+}
 
 .large_cell {
-
-    background-color: white;
-    text-align: center;
 
     width: 100px;
     height: 100px;
 
     margin-left: 10px;
     margin-top: 10px;
-
-    float: left;
-    display: table-column;
-
-    border: 1px solid black;
-
-    cursor: pointer;
 
 }
 
@@ -65,20 +65,12 @@
 
 .medium_cell {
 
-    background-color: white;
-    text-align: center;
 
     width: 75px;
     height: 75px;
 
     margin-left: 7px;
     margin-top: 7px;
-
-    float: left;
-    display: table-column;
-
-    border: 1px solid black;
-    cursor: pointer;
 
 }
 
@@ -91,8 +83,6 @@
 
 .small_cell {
 
-    background-color: white;
-    text-align: center;
 
     width: 50px;
     height: 50px;
@@ -100,32 +90,16 @@
     margin-left: 5px;
     margin-top: 5px;
 
-    float: left;
-    display: table-column;
-
-    border: 1px solid black;
-
-    cursor: pointer;
-
 }
 
 .XS_cell {
 
-    background-color: white;
-    text-align: center;
 
     width: 40px;
     height: 40px;
 
     margin-left: 5px;
     margin-top: 5px;
-
-    float: left;
-    display: table-column;
-
-    border: 1px solid black;
-
-    cursor: pointer;
 
 }
 
