--- a/estilo/style.css
+++ b/estilo/style.css
@@ -49,29 +49,38 @@ input {
 
 }
 
+#pBox{
+
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+
+}
+
 #box {
 
+    position: relative;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.3);
 
-    margin-left: 5%;
-    margin-top: 20%;
+    top: 2%;
+    left: 2.5%;
 
     width: 90%;
-    height: 15%;
+    height: 20%;
 
-    bottom: 0;
     border: 2px solid white;
+    border-radius: 5px;
 
 }
 
 #coord {
 
     position: relative;
+    padding: 2px;
 
-    top: 5%;
-
-    width: 100%;
-    height: auto;
+    height: 30%;
 
 }
 
@@ -83,7 +92,7 @@ input {
     text-align: center;
 
     width: 50%;
-    height: 5%;
+    margin-top: 2%;
 
 }
 
@@ -93,36 +102,36 @@ input {
 
     position: absolute;
     text-align: center;
-
     left: 50%;
 
     width: 50%;
-    height: 5%;
+    margin-top: 2%;
 
 }
 
 #botons {
 
     position: relative;
-
-    top: 40%;
     text-align: center;
 
+    top: 2%;
+
     width: 100%;
-    height: auto;
+    height: 66%;
 
 }
 
 #ins {
 
-    position: absolute;
+    position: relative;
 
-    width: 100%;
-    height: 5%;
+    top: 5%;
 
 }
 
 #insBoto {
+
+    position: relative;
 
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
@@ -132,6 +141,14 @@ input {
     cursor: pointer;
 
     border-radius: 8px;
+
+}
+
+#abandona {
+
+    position: relative;
+
+    top: 10%;
 
 }
 
@@ -141,20 +158,33 @@ input {
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid white;
 
+    position: relative;
+
     padding: 7px 15px;
     cursor: pointer;
     border-radius: 8px;
 
 }
 
-#abandona {
+#help {
 
-    position: absolute;
+    position: relative;
 
-    top: 40px;
+    top: 15%;
 
-    width: 100%;
-    height: 5%;
+}
+
+#helpBoto{
+
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 1px solid white;
+
+    position: relative;
+
+    padding: 7px 15px;
+    cursor: pointer;
+    border-radius: 8px;
 
 }
 
